[workspace.package]
edition = "2024"
version = "0.5.0"
authors = ["RCore Team <yuchen@tsinghua.edu.cn>"]
license = "Apache-2.0"
homepage = "https://github.com/rcore-os/tgoskits"
repository = "https://github.com/rcore-os/tgoskits"
keywords = ["arceos", "kernel"]
categories = ["os", "no-std"]

[profile.release]
lto = true

[workspace]
resolver = "3"
members = [
    "xtask",

    # components
    "components/aarch64_sysreg",
    "components/arm_pl011",
    "components/arm_pl031",
    "components/arm_vcpu",
    "components/arm_vgic",
    "components/axaddrspace",
    "components/axallocator",
    "components/axbacktrace",
    "components/axdevice",
    "components/axdevice_base",
    "components/axerrno",
    "components/axfs-ng-vfs",
    "components/axhvc",
    "components/axio",
    "components/axklib",
    "components/axpoll",
    "components/axsched",
    "components/axvcpu",
    "components/axvm",
    "components/axvmconfig",
    "components/bitmap-allocator",
    "components/cap_access",
    "components/cpumask",
    "components/handler_table",
    "components/int_ratio",
    "components/kernel_guard",
    "components/kspin",
    "components/lazyinit",
    "components/linked_list_r4l",
    "components/range-alloc-arceos",
    "components/riscv-h",
    "components/riscv_plic",
    "components/riscv_vcpu",
    "components/riscv_vplic",
    "components/rsext4",
    "components/scope-local",
    "components/starry-process",
    "components/starry-signal",
    "components/starry-smoltcp",
    "components/starry-vm",
    "components/timer_list",
    "components/axfs_crates/axfs_vfs",
    "components/axfs_crates/axfs_ramfs",
    "components/axfs_crates/axfs_devfs",

    # os/arceos/modules
    "os/arceos/modules/axalloc",
    "os/arceos/modules/axconfig",
    "os/arceos/modules/axdisplay",
    "os/arceos/modules/axdma",
    "os/arceos/modules/axdriver",
    "os/arceos/modules/axfs",
    "os/arceos/modules/axfs-ng",
    "os/arceos/modules/axhal",
    "os/arceos/modules/axinput",
    "os/arceos/modules/axipi",
    "os/arceos/modules/axlog",
    "os/arceos/modules/axmm",
    "os/arceos/modules/axnet",
    "os/arceos/modules/axnet-ng",
    "os/arceos/modules/axruntime",
    "os/arceos/modules/axsync",
    "os/arceos/modules/axtask",

    # os/arceos/api
    "os/arceos/api/axfeat",
    "os/arceos/api/arceos_api",
    "os/arceos/api/arceos_posix_api",

    # os/arceos/ulib
    "os/arceos/ulib/axstd",
    "os/arceos/ulib/axlibc",

    # os/arceos/examples
    "os/arceos/examples/helloworld",
    "os/arceos/examples/helloworld-myplat",
    "os/arceos/examples/httpclient",
    "os/arceos/examples/httpserver",
    "os/arceos/examples/shell",

    # test-suit
    "test-suit/arceos/rust/display",
    "test-suit/arceos/rust/exception",
    "test-suit/arceos/rust/fs/*",
    "test-suit/arceos/rust/memtest",
    "test-suit/arceos/rust/net/*",
    "test-suit/arceos/rust/task/*",
    "test-suit/starryos",

    # os/axvisor
    "os/axvisor",

    # os/StarryOS
    "os/StarryOS/starryos",
    "os/StarryOS/kernel",

    # scripts
    "scripts/axbuild",

    # platform
    "platform/axplat-dyn",
    "platform/x86-qemu-q35",

    # demo examples
    "examples/tgmath",
]
exclude = [
    # workspace directories
    "components/axplat_crates",
    "os/arceos",
    "os/StarryOS",
    "components/percpu",
    "components/axvisor_api",
    "components/crate_interface",
    "components/ctor_bare",
    "components/page_table_multiarch",
    "components/axconfig-gen",
    "components/axdriver_crates",
    "components/axmm_crates",
    "components/starry-smoltcp/fuzz",
    "components/crate_interface/test_crates",
    "components/axfs_crates",
]

[patch.crates-io]
# === axerrno ===
axerrno = { path = "components/axerrno" }
axallocator = { path = "components/axallocator" }
axbacktrace = { path = "components/axbacktrace" }

axconfig = { path = "os/arceos/modules/axconfig" }
axdisplay = { path = "os/arceos/modules/axdisplay" }
axdma = { path = "os/arceos/modules/axdma" }
axhal = { path = "os/arceos/modules/axhal" }

axcpu = { path = "components/axcpu" }
axio = { path = "components/axio" }
axsched = { path = "components/axsched" }
axpoll = { path = "components/axpoll" }
lazyinit = { path = "components/lazyinit" }
linked_list_r4l = { path = "components/linked_list_r4l" }
timer_list = { path = "components/timer_list" }
int_ratio = { path = "components/int_ratio" }
cap_access = { path = "components/cap_access" }
handler_table = { path = "components/handler_table" }
riscv_plic = { path = "components/riscv_plic" }
rsext4 = { path = "components/rsext4" }
arm_pl011 = { path = "components/arm_pl011" }
arm_pl031 = { path = "components/arm_pl031" }
fxmac_rs = { path = "components/fxmac_rs" }
smoltcp = { path = "components/starry-smoltcp" }
axfs-ng-vfs = { path = "components/axfs-ng-vfs" }
axfs_vfs = { path = "components/axfs_crates/axfs_vfs" }
axfs_ramfs = { path = "components/axfs_crates/axfs_ramfs" }
axfs_devfs = { path = "components/axfs_crates/axfs_devfs" }

axfs = { path = "os/arceos/modules/axfs" }
axfs-ng = { path = "os/arceos/modules/axfs-ng" }
axnet = { path = "os/arceos/modules/axnet" }
axnet-ng = { path = "os/arceos/modules/axnet-ng" }
axalloc = { path = "os/arceos/modules/axalloc" }
axdriver = { path = "os/arceos/modules/axdriver" }
axinput = { path = "os/arceos/modules/axinput" }
axipi = { path = "os/arceos/modules/axipi" }
axlog = { path = "os/arceos/modules/axlog" }
axmm = { path = "os/arceos/modules/axmm" }
axruntime = { path = "os/arceos/modules/axruntime" }
axsync = { path = "os/arceos/modules/axsync" }
axtask = { path = "os/arceos/modules/axtask" }
axfeat = { path = "os/arceos/api/axfeat" }
arceos_api = { path = "os/arceos/api/arceos_api" }
arceos_posix_api = { path = "os/arceos/api/arceos_posix_api" }
axstd = { path = "os/arceos/ulib/axstd" }
axlibc = { path = "os/arceos/ulib/axlibc" }

# === axplat ===
axplat = { path = "components/axplat_crates/axplat" }
axplat-macros = { path = "components/axplat_crates/axplat-macros" }
axplat-aarch64-bsta1000b = { path = "components/axplat_crates/platforms/axplat-aarch64-bsta1000b" }
axplat-aarch64-peripherals = { path = "components/axplat_crates/platforms/axplat-aarch64-peripherals" }
axplat-aarch64-phytium-pi = { path = "components/axplat_crates/platforms/axplat-aarch64-phytium-pi" }
axplat-aarch64-qemu-virt = { path = "components/axplat_crates/platforms/axplat-aarch64-qemu-virt" }
axplat-aarch64-raspi = { path = "components/axplat_crates/platforms/axplat-aarch64-raspi" }
axplat-loongarch64-qemu-virt = { path = "components/axplat_crates/platforms/axplat-loongarch64-qemu-virt" }
axplat-riscv64-qemu-virt = { path = "components/axplat_crates/platforms/axplat-riscv64-qemu-virt" }
axplat-x86-pc = { path = "components/axplat_crates/platforms/axplat-x86-pc" }
axplat-x86-qemu-q35 = { path = "platform/x86-qemu-q35" }

axplat-dyn = { path = "platform/axplat-dyn" }

# === axdriver ===
axdriver_base = { path = "components/axdriver_crates/axdriver_base" }
axdriver_block = { path = "components/axdriver_crates/axdriver_block" }
axdriver_display = { path = "components/axdriver_crates/axdriver_display" }
axdriver_net = { path = "components/axdriver_crates/axdriver_net" }
axdriver_pci = { path = "components/axdriver_crates/axdriver_pci" }
axdriver_virtio = { path = "components/axdriver_crates/axdriver_virtio" }
axdriver_input = { path = "components/axdriver_crates/axdriver_input" }
axdriver_vsock = { path = "components/axdriver_crates/axdriver_vsock" }

# === percpu ===
percpu = { path = "components/percpu/percpu" }
percpu_macros = { path = "components/percpu/percpu_macros" }

# === page_table ===
page_table_entry = { path = "components/page_table_multiarch/page_table_entry" }
page_table_multiarch = { path = "components/page_table_multiarch/page_table_multiarch" }

# === crate_interface ===
crate_interface = { path = "components/crate_interface" }
crate_interface_lite = { path = "components/crate_interface/crate_interface_lite" }

# === ctor_bare ===
ctor_bare = { path = "components/ctor_bare/ctor_bare" }
ctor_bare_macros = { path = "components/ctor_bare/ctor_bare_macros" }

# === memory (axmm_crates) ===
memory_addr = { path = "components/axmm_crates/memory_addr" }
memory_set = { path = "components/axmm_crates/memory_set" }

# === bitmap-allocator ===
bitmap-allocator = { path = "components/bitmap-allocator" }

# === kernel_guard ===
kernel_guard = { path = "components/kernel_guard" }

# === kspin ===
kspin = { path = "components/kspin" }

# === starry-process ===
starry-process = { path = "components/starry-process" }

# === starry-signal ===
starry-signal = { path = "components/starry-signal" }

# === starry-vm ===
starry-vm = { path = "components/starry-vm" }

scope-local = { path = "components/scope-local" }

axbuild = { path = "scripts/axbuild" }
starry-kernel = { path = "os/StarryOS/kernel" }

# === axvisor ===
axvm = { path = "components/axvm" }
axvmconfig = { path = "components/axvmconfig" }
axvcpu = { path = "components/axvcpu" }
x86_vcpu = { path = "components/x86_vcpu" }
x86_vlapic = { path = "components/x86_vlapic" }
arm_vcpu = { path = "components/arm_vcpu" }
arm_vgic = { path = "components/arm_vgic" }
aarch64_sysreg = { path = "components/aarch64_sysreg" }
riscv_vcpu = { path = "components/riscv_vcpu" }
riscv_vplic = { path = "components/riscv_vplic" }
riscv-h = { path = "components/riscv-h" }
axaddrspace = { path = "components/axaddrspace" }
axdevice = { path = "components/axdevice" }
axdevice_base = { path = "components/axdevice_base" }
axvisor_api = { path = "components/axvisor_api" }
axvisor_api_proc = { path = "components/axvisor_api/axvisor_api_proc" }
axhvc = { path = "components/axhvc" }
axklib = { path = "components/axklib" }
range-alloc-arceos = { path = "components/range-alloc-arceos" }
cpumask = { path = "components/cpumask" }
axconfig-gen = { path = "components/axconfig-gen/axconfig-gen" }
axconfig-macros = { path = "components/axconfig-gen/axconfig-macros" }

# === drivers ===
# fxmac_rs = { path = "components/fxmac_rs", version = "0.2.1" }

define-simple-traits = { path = "components/crate_interface/test_crates/define-simple-traits" }
define-weak-traits = { path = "components/crate_interface/test_crates/define-weak-traits" }
impl-simple-traits = { path = "components/crate_interface/test_crates/impl-simple-traits" }
impl-weak-partial = { path = "components/crate_interface/test_crates/impl-weak-partial" }
impl-weak-traits = { path = "components/crate_interface/test_crates/impl-weak-traits" }
[workspace.dependencies]
# === os/arceos crates (0.3.0-preview.3) ===
# ulib
axstd = { path = "os/arceos/ulib/axstd", version = "0.5.0" }
axlibc = { path = "os/arceos/ulib/axlibc", version = "0.5.0" }

# api
arceos_api = { path = "os/arceos/api/arceos_api", version = "0.5.0" }
arceos_posix_api = { path = "os/arceos/api/arceos_posix_api", version = "0.5.0" }
axfeat = { path = "os/arceos/api/axfeat", version = "0.5.0" }

# modules
axalloc = { path = "os/arceos/modules/axalloc", version = "0.5.0" }
axconfig = { path = "os/arceos/modules/axconfig", version = "0.5.0" }
axdisplay = { path = "os/arceos/modules/axdisplay", version = "0.5.0" }
axdma = { path = "os/arceos/modules/axdma", version = "0.5.0" }
axdriver = { path = "os/arceos/modules/axdriver", version = "0.5.0" }
axfs = { path = "os/arceos/modules/axfs", version = "0.5.0" }
axfs-ng = { path = "os/arceos/modules/axfs-ng", version = "0.5.0" }
axhal = { path = "os/arceos/modules/axhal", version = "0.5.0" }
axinput = { path = "os/arceos/modules/axinput", version = "0.5.0" }
axipi = { path = "os/arceos/modules/axipi", version = "0.5.0" }
axlog = { path = "os/arceos/modules/axlog", version = "0.5.0" }
axmm = { path = "os/arceos/modules/axmm", version = "0.5.0" }
axnet = { path = "os/arceos/modules/axnet", version = "0.5.0" }
axnet-ng = { path = "os/arceos/modules/axnet-ng", version = "0.5.0" }
axplat-dyn = { path = "platform/axplat-dyn", version = "0.5.0", default-features = false }
axruntime = { path = "os/arceos/modules/axruntime", version = "0.5.0" }
axsync = { path = "os/arceos/modules/axsync", version = "0.5.0" }
axtask = { path = "os/arceos/modules/axtask", version = "0.5.0" }

# === components (actual versions) ===
axaddrspace = { path = "components/axaddrspace", version = "0.5.0" }
axallocator = { path = "components/axallocator", version = "0.4.0" }
axbacktrace = { path = "components/axbacktrace", version = "0.3.2" }
axdevice = { path = "components/axdevice", version = "0.4.2" }
axdevice_base = { path = "components/axdevice_base", version = "0.4.2" }
axerrno = { path = "components/axerrno", version = "0.4.2" }
axfs-ng-vfs = { path = "components/axfs-ng-vfs", version = "0.3.1" }
axhvc = { path = "components/axhvc", version = "0.4.0" }
axio = { path = "components/axio", version = "0.5.0" }
axklib = { path = "components/axklib", version = "0.5.0" }
axpoll = { path = "components/axpoll", version = "0.3.2" }
timer_list = { path = "components/timer_list", version = "0.3.0" }
axsched = { path = "components/axsched", version = "0.5.1" }
axvcpu = { path = "components/axvcpu", version = "0.5.0" }
axvm = { path = "components/axvm", version = "0.5.0" }
axvmconfig = { path = "components/axvmconfig", version = "0.4.2" }
axfs_vfs = { path = "components/axfs_crates/axfs_vfs", version = "0.3.2" }

axbuild = { path = "scripts/axbuild", version = "0.4.0" }

starry-kernel = { path = "os/StarryOS/kernel", version = "0.5.0" }

axcpu = { version = "0.5.0", path = "components/axcpu" }
axplat = { version = "0.5.1", path = "components/axplat_crates/axplat" }
axplat-aarch64-bsta1000b = { version = "0.5.1", path = "components/axplat_crates/platforms/axplat-aarch64-bsta1000b" }
axplat-aarch64-peripherals = { version = "0.5.1", path = "components/axplat_crates/platforms/axplat-aarch64-peripherals" }
axplat-aarch64-phytium-pi = { version = "0.5.1", path = "components/axplat_crates/platforms/axplat-aarch64-phytium-pi" }
axplat-aarch64-qemu-virt = { version = "0.5.1", path = "components/axplat_crates/platforms/axplat-aarch64-qemu-virt" }
axplat-aarch64-raspi = { version = "0.5.1", path = "components/axplat_crates/platforms/axplat-aarch64-raspi" }
axplat-loongarch64-qemu-virt = { version = "0.5.1", path = "components/axplat_crates/platforms/axplat-loongarch64-qemu-virt" }
axplat-riscv64-qemu-virt = { version = "0.5.0", path = "components/axplat_crates/platforms/axplat-riscv64-qemu-virt" }
axplat-x86-pc = { version = "0.5.1", path = "components/axplat_crates/platforms/axplat-x86-pc" }
axdriver_base = { version = "0.3.4", path = "components/axdriver_crates/axdriver_base" }
axdriver_block = { version = "0.3.4", path = "components/axdriver_crates/axdriver_block" }
axdriver_display = { version = "0.3.4", path = "components/axdriver_crates/axdriver_display" }
axdriver_input = { version = "0.3.4", path = "components/axdriver_crates/axdriver_input" }
axdriver_net = { version = "0.3.4", path = "components/axdriver_crates/axdriver_net" }
axdriver_pci = { version = "0.3.4", path = "components/axdriver_crates/axdriver_pci" }
axdriver_virtio = { version = "0.3.4", path = "components/axdriver_crates/axdriver_virtio" }
axdriver_vsock = { version = "0.3.4", path = "components/axdriver_crates/axdriver_vsock" }
crate_interface = {version = "0.5.0", path = "components/crate_interface" }

# === Other external crates ===
anyhow = "1.0"
bindgen = "0.72"
buddy-slab-allocator = "0.2"
cfg-if = "1.0"
chrono = { version = "0.4", default-features = false }
ctor_bare = { version = "0.4.1", path = "components/ctor_bare/ctor_bare" }
event-listener = { version = "5.4.0", default-features = false }
kernel_guard = { version = "0.3.3", path = "components/kernel_guard" }
kspin = { version = "0.3.1", path = "components/kspin" }
lazyinit = { version = "0.4.2", path = "components/lazyinit" }
schemars = "1.2.1"
toml = "1"

# === starry-* ===
starry-process = { version = "0.4.0", path = "components/starry-process" }
starry-signal = { version = "0.5.0", path = "components/starry-signal" }
starry-vm = { version = "0.5.0", path = "components/starry-vm" }
lazy_static = { version = "1.5", features = ["spin_no_std"] }
lock_api = { version = "0.4", default-features = false }
log = "0.4"
memory_addr = { version = "0.6.1", path = "components/axmm_crates/memory_addr" }
page_table_multiarch = { version = "0.8.1", features = ["axerrno"], path = "components/page_table_multiarch/page_table_multiarch" }
percpu = { version = "0.4.3", path = "components/percpu/percpu" }
scope-local = { version = "0.3.2", path = "components/scope-local" }
spin = "0.10"
ostool = { version = "0.11" }
